--- a/alpha/event/static/styles/searchpad/popup.css
+++ b/alpha/event/static/styles/searchpad/popup.css
@@ -72,3 +72,16 @@
     overflow: auto;
     padding-right: 5px;
 }
+
+.search-pad-popup .event-details-block .event-details {
+    margin-left: 20px;
+}
+
+.search-pad-popup .event-details-block .event-img {
+    margin: 0px;    
+}
+
+.search-pad-popup .event-details-block .event-details .event-date-wrapper,
+.search-pad-popup .event-details-block .event-details .event-description {
+    margin-left: 0;
+}
