--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -64,14 +64,18 @@
                             <div class="addthis_toolbox addthis_default_style addthis_16x16_style">
                             <a class="addthis_button_facebook"></a>
                             <a class="addthis_button_twitter"></a>
-                            <a class="addthis_button_google_plusone_share"></a>
-                            <a class="addthis_button_myspace"></a>
                             <a class="addthis_button_pinterest_share"></a>
+                            <a class="addthis_button_google_plusone_share"></a>
                             <a class="addthis_button_linkedin"></a>
+                            <a class="addthis_button_myspace"></a>
+                            <a class="addthis_button_blogger"></a>
+                            <a class="addthis_button_email"></a>
+                            
+                            
                             <a class="addthis_button_compact"></a><a class="addthis_counter addthis_bubble_style"></a>
                             </div>
                             <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-                            <script data-id="addthis_js" type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5228e9b0617f180a"></script>
+                            <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5228e9b0617f180a"></script>
                             <!-- AddThis Button END -->
                         </td>
                     </tr>
