--- a/alpha/event/templates/featured/featured_events.html
+++ b/alpha/event/templates/featured/featured_events.html
@@ -8,7 +8,7 @@
             </a>
         </td>
         <td width="10" align="left">
-            <div style="line-height:0;"><img src="{{site}}{{STATIC_URL}}images/emails/blank.gif" width="10" height="10" alt="" /></div>
+            <div style="line-height:0;"><img src="{{site}}{{STATIC_URL}}/images/emails/blank.gif" width="10" height="10" alt="" /></div>
         </td>
     {% else %}
         <div class="features">
