--- a/alpha/event/static/styles/when.css
+++ b/alpha/event/static/styles/when.css
@@ -190,11 +190,16 @@
 }
 
 .my-time-picker,
-.my-additional-time-picker {
+.my-additional-time-picker,
+.my-time-picker-inner-wrapper {
     display:inline-block;
     margin-right:10px;
     text-align:center;
     vertical-align: top;
+}
+
+.my-time-picker {
+    margin-right: 0;
 }
 
 .my-additional-time-picker {
@@ -348,16 +353,33 @@
     display: none;
 }
 
+.multiple-time-event-popup,
 .multiple-day-event-popup {
-    position: absolute;
-    bottom: 25px;
-    right: -5px;
-    width: 245px;
     border: 1px solid #ccc;
     background: #efefef;
     color: #000;
     padding: 5px;
     display: none;
+}
+
+.multiple-day-event-popup {
+    position: absolute;
+    bottom: 25px;
+    right: -5px;
+    width: 245px;    
+}
+
+.multiple-time-event-popup {
+    position: absolute;
+    left: 50px;
+    top: 0px;
+    width: 150px;
+    font-size: 12px;
+    font-weight: normal;
+    white-space: normal;
+    line-height: 15px;
+    z-index: 10;
+    text-align: left;
 }
 
 .multiple-day-event .checkbox.white {
