Remove 12pm from list in jump popup

--- a/alpha/event/static/styles/browse/jump_popup.css
+++ b/alpha/event/static/styles/browse/jump_popup.css
@@ -35,7 +35,7 @@
     margin-left: 0;
 }
 
-.jump-popup .end-time-checkbox {
+.jump-popup .end-time-checkbox-wrapper {
     margin-left: 5px;
     margin-right: 5px;
 }
