--- a/alpha/accounts/templates/venue_accounts/private_venue_account.html
+++ b/alpha/accounts/templates/venue_accounts/private_venue_account.html
@@ -217,7 +217,7 @@
                 {% include 'venue_accounts/_venue_featured_stats_table.html' %}
             </div>
             <div class="box{% if active_tab == "venue-advertising-stats" %} visible{% endif %} advertising-stats">
-                {% include 'advertising/stats/list.html' with ads_items=venue_account.ads %}
+                {% include 'advertising/stats/list.html' with ads_items=venue_account.campaigns %}
             </div>
         </div>
     </div>
