--- a/alpha/accounts/templates/venue_accounts/_venue_featured_events_table.html
+++ b/alpha/accounts/templates/venue_accounts/_venue_featured_events_table.html
@@ -8,28 +8,7 @@
 <div class="account-entry-wrapper entry-wrapper">
 {% for event in venue_featured_events %}    
     <div class="entry-info">
-        <div class="entry-img-prev">
-            {% if event.picture %}
-                <img src="{% cropped_thumbnail event.base "cropping" width=60 %}" height="60px" weight="60px">
-            {% else %}
-                <img src="{{STATIC_URL}}images/default-event.jpg" height="60px" weight="60px">
-            {% endif %}
-        </div>
-        <div class="entry-details-wrapper">                                  
-            <div class="title">
-                <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}">
-                    {{event.name}}&nbsp;
-                </a>                    
-            </div>
-            <div class="entry-date">
-                {{event.start_time|date:"l, F d, Y"}}
-                <span class="delimeter">|</span>
-                {{event.start_time|just_time}} - {{event.end_time|just_time}}
-            </div>
-            <div class="entry-description">                    
-                {{ event.venue.name }}, {% if event.venue.street %}{{ event.venue.street }}, {% endif %}{{ event.venue.city.name_std }}
-            </div>                
-        </div>        
+        {% short_single_event event %}
         <div class="clr"></div>
     </div>
 {% empty %}
