--- a/alpha/advertising/templates/advertising/stats/list.html
+++ b/alpha/advertising/templates/advertising/stats/list.html
@@ -4,76 +4,6 @@
     {% paginate 5 campaigns using "ads_page" %}
 
     {% for campaign in campaigns %}
-        <div class="detailed-view" >
-            <div class="left">
-                <table>
-                    <tr>
-                        <td>Campaign Name:</td>
-                        <td data-stat-key="campaign">{{ campaign.name }}</td>
-                    </tr>
-                    <tr>
-                        <td>Owner</td>
-                        <td>
-                            {{ campaign.account.user.username }}
-                            {% if campaign.venue_account %}
-                                ({{ campaign.venue_account }})
-                            {% endif %}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Started:</td>
-                        <td data-stat-key="started">{{ campaign.started|date:"b j, Y"|capfirst }}</td>
-                    </tr>
-                    <tr>
-                        <td>Ended:</td>
-                        <td data-stat-key="ended">
-                            {% if campaign.ended %}
-                                {{ campaign.ended|date:"b j, Y"|capfirst }}
-                            {% else %}
-                                Ongoing
-                            {% endif %}
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <div class="right">
-                <table>
-                    <tr>
-                        <td>Amount Spent:</td>
-                        <td data-stat-key="spent">{{ campaign.ammount_spent }}</td>
-                    </tr>
-                    <tr>
-                        <td>Amount Remaining:</td>
-                        <td data-stat-key="remaining">
-                            {% if campaign.enough_money %}
-                                {{ campaign.ammount_remaining }}
-                            {% else %}
-                                C$0
-                            {% endif %}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Regions:</td>
-                        <td>
-                            {% if campaign.all_of_canada %}
-                                All of Canada
-                            {% else %}
-                                {{ campaign.regions_representation }}
-                            {% endif %}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Edit:</td>
-                        <td>
-                            <a href="{% url 'advertising_edit_campaign' campaign.id %}">
-                                <img src="/static/images/edit-icon.png"/>
-                            </a>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-
         <table class="profile-table ads-stats" celpadding="0" cellspacing="0">
             <tr>
                 <th class="action">Banner</th>
@@ -84,7 +14,7 @@
                 <th class="action">CPM</th>
             </tr>
             {% for ad in campaign.advertising_set.all %}
-            <tr class="ad-line {% if forloop.first %}selected{% endif %}">
+            <tr class="ad-line">
                 <td class="action">
                     <div class="image">
                         <a href="/media/{{ ad.image }}" class="advertising-image" target="_blank">
@@ -92,20 +22,20 @@
                         </a>
                     </div>
                 </td>
-                <td class="action" data-stat-key="type" data-stat-value="{{ ad.ad_type }}">
+                <td class="action">
                     {{ ad.ad_type.name }}<br>
                     {{ ad.ad_type.width }}x{{ ad.ad_type.height }}
                 </td>
-                <td class="action" data-stat-key="impressions">
+                <td class="action">
                     {{ ad.views }}
                 </td>
-                <td class="action" data-stat-key="clicks">
+                <td class="action">
                     {{ ad.clicks }}
                 </td>
-                <td class="action" data-stat-key="cpc">
+                <td class="action">
                     {{ ad.cpc_price }}
                 </td>
-                <td class="action" data-stat-key="cpm">
+                <td class="action">
                     {{ ad.cpm_price }}
                 </td>
             </tr>
